--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,35 +20,6 @@
         tools:text="
 " />
 
-    <Button
-        android:id="@+id/btnIzq"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginEnd="51dp"
-        android:layout_marginBottom="216dp"
-        android:background="@android:color/holo_red_dark"
-
-        android:onClick="onClick"
-        android:textColor="#FF0000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnDer"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btnDer"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="51dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="216dp"
-        android:background="@android:color/black"
-        android:onClick="onClick"
-        android:textColor="#020202"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnIzq" />
-
     <TextView
         android:id="@+id/tvTemporizador"
         android:layout_width="wrap_content"
@@ -94,6 +65,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/star_icon_red" />
+
+    <ImageButton
+        android:id="@+id/btnRed"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginBottom="164dp"
+        android:adjustViewBounds="true"
+        android:background="#223147"
+        android:onClick="onClick"
+        android:scaleType="centerInside"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/star_icon_red" />
+
+    <ImageButton
+        android:id="@+id/btnblue"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="164dp"
+        android:adjustViewBounds="true"
+        android:background="#223147"
+        android:onClick="onClick"
+        android:scaleType="centerInside"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/star_icon" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
